--- a/BuildaWebsiteDesignSystem/index.html
+++ b/BuildaWebsiteDesignSystem/index.html
@@ -5,84 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./resources/css/styles.css" type="text/css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Designer</title>
 </head>
 <body>
 
     <!-- Header Section -->
     <header>
-        <h1>My Website Stlye Guide</h1>
+        <h1>My Website Style Guide</h1>
     </header>
 
     <!-- Colors Section -->
-    <section>
+    <section class="container">
         <h2>Colors</h2>
-        <div class="container cool-blue">
-            <p>Cool Blue</p>
-            <p>#2d5dcc</p>
+        <div class="color-choice cool-blue">
+            <p class="cool-blue">Cool Blue</p>
+            <p class="cool-blue">#2d5dcc</p>
         </div>
-        <div class="container pink">
-            <p>Pink</p>
-            <p>#d957d9</p>
+        <div class="color-choice pink">
+            <p class="pink">Pink</p>
+            <p class="pink">#d957d9</p>
         </div>
-        <div class="container mint-green">
-            <p>Mint Green</p>
-            <p>#4fe0b0</p>
-        </div>
-        <div class="container beige">
-            <p>Beige</p>
-            <p>#efd9ca</p>
+        <div class="color-choice mint-green">
+            <p class="mint-green">Mint Green</p>
+            <p class="mint-green">#4fe0b0</p>
+            </div>
+        <div class="color-choice beige">
+            <p class="beige">Beige</p>
+            <p class="beige">#efd9ca</p>
         </div>
     </section>
 
     <!-- Fonts Section -->
-    <section>
+    <section class="fonts">
         <h2>Fonts</h2>
-        <div class="container source-code-pro">
-            <h3>Source Code Pro</h3>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
+        <div class="font-choices">
+            <h3 class="source-code-pro">Source Code Pro</h3>
+            <p class="regular source-code-pro">The quick brown fox jumps over the lazy dog.</p>
+            <p class="bold source-code-pro">The quick brown fox jumps over the lazy dog.</p>
+            <p class="italic source-code-pro">The quick brown fox jumps over the lazy dog.</p>
         </div>
-        <div class="container nunito-sans">
-            <h3>Nunito Sans</h3>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
+        <div class="font-choices">
+            <h3 class="nunito-sans">Nunito Sans</h3>
+            <p class="regular nunito-sans">The quick brown fox jumps over the lazy dog.</p>
+            <p class=" bold nunito-sans">The quick brown fox jumps over the lazy dog.</p>
+            <p class="italic nunito-sans">The quick brown fox jumps over the lazy dog.</p>
         </div>
-        <div class="container poppins">
-            <h3>Poppins</h3>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
+        <div class="font-choices">
+            <h3 class="poppins">Poppins</h3>
+            <p class="regular poppins">The quick brown fox jumps over the lazy dog.</p>
+            <p class="bold poppins">The quick brown fox jumps over the lazy dog.</p>
+            <p class="itlaic poppins">The quick brown fox jumps over the lazy dog.</p>
         </div>
     </section>
 
     <!-- Text Stlyes Section -->
-    <section>
+    <section class="text-styles">
         <h2>Text Styles</h2>
-        <div class="container heading1">
-            <p>H1: Main page heading</p>
+        <div>
+            <p class="heading1 nunito-sans">H1: Main page heading</p>
             <ul>
-                <li>Font-weight: 700 (bold)</li>
-                <li>Font-size: 26px</li>
-                <li>Font-family: Nunito Sans</li>
+                <li class="nunito-sans">Font-weight: 700 (bold)</li>
+                <li class="nunito-sans">Font-size: 26px</li>
+                <li class="nunito-sans">Font-family: Nunito Sans</li>
             </ul>
         </div>
-        <div class="container heading2">
-            <p>H2: Subheading</p>
+        <div>
+            <p class="heading2 poppins">H2: Subheading</p>
             <ul>
-                <li>Font-weight: 500</li>
-                <li>Font-size: 18px</li>
-                <li>Font-family: Poppins</li>
+                <li class="poppins">Font-weight: 500</li>
+                <li class="poppins">Font-size: 18px</li>
+                <li class="poppins">Font-family: Poppins</li>
             </ul>
         </div>
-        <div class="container paragraph-text">
-            <p>P: Paragraph text</p>
+        <div>
+            <p class="poppins">P: Paragraph text</p>
             <ul>
-                <li>Font-weight: 400 (regular)</li>
-                <li>Font-size: 14px</li>
-                <li>Font-family: Poppins</li>
+                <li class="poppins">Font-weight: 400 (regular)</li>
+                <li class="poppins">Font-size: 14px</li>
+                <li class="poppins">Font-family: Poppins</li>
             </ul>
         </div>
     </section>
