Completion of Cozy Tea Project

--- a/TeaCozyProject/index.html
+++ b/TeaCozyProject/index.html
@@ -62,19 +62,19 @@
     <section class="location">
         <h2>Locations</h2>
         <div class="location-container">
-            <div class="location-text">
+            <div class="lt">
                 <h3>Downtown</h3>
                 <p>384 West 4th St</p>
                 <p>Suite 108</p>
                 <p>Portland, Maine</p>
             </div>
-            <div class="location-text">
+            <div class="lt">
                 <h3>East Bayside</h3>
                 <p>3433 Phisherman's Avenue</p>
                 <p>(Northwest Corner)</p>
                 <p>Portland, Maine</p>
             </div>
-            <div class="location-text">
+            <div class="lt">
                 <h3>Oakdale</h3>
                 <p>515 Crescent Avenue</p>
                 <p>Second Floor</p>
@@ -85,12 +85,12 @@
 
     <!-- Footer -->
     <footer>
-        <div>
-            <h2>The Tea Cozy</h2>
-            <p>contact@theteacozy.com</p>
-            <p>917-555-8904</p>
+        <div class="comp">
+            <h2 class="spacer">The Tea Cozy</h2>
+            <h5 class="spacer">contact@theteacozy.com</h5>
+            <p class="spacer">917-555-8904</p>
         </div>
-        <p>copyright The Tea Cozy 2017</p>
+        <p class="copyright-sec">copyright The Tea Cozy 2017</p>
     </footer>
 
 </body>
